work page complete

--- a/kim/where.html
+++ b/kim/where.html
@@ -10,7 +10,21 @@
 
     <img src="images/where-i-live.jpg" alt="photo of my home" width="500" height="625">
 
-    <p>I split my time between Spain—where I hold a residence permit and enjoy the relaxed lifestyle—and Korea, where I reconnect with my roots.
-    </p>
+    <p>I split my time between Spain—where I hold a residence permit and enjoy the relaxed lifestyle—and Korea, where I reconnect with my roots.</p>
+
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="where.html">Where I live</a></li>
+            <li><a href="work.html">What I do</a></li>
+            <li><a href="interests/index.html">My Interests</a>
+                <ul>
+                    <li><a href="interests/photography.html">Taking Photos</a></li>
+                    <li><a href="interests/drone.html">Flying A Drone</a></li>
+                    <li><a href="interests/cycling.html">Riding My Bike</a></li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
 </body>
 </html>
