--- a/kim/work.html
+++ b/kim/work.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Site: Home Page</title>
+    <title>What I do</title>
 </head>
 <body>
-    <h1>Han Jun's Personal Sites</h1>
+    <h1>What I do</h1>
 
-    <p><img src="images/hj-profile-photo.jpg" alt="my profile photo" width="500" height="500"></p>
+    <img src="images/my-hobby-photo.jpg" alt="What I do photo" width="500" height="625">
 
-    <p>Hi, I'm Han Jun, a Korean national currently living between Spain and Korea, exploring life through a mix of creativity and curiosity.</p>
+    <p>With a degree in Economics from a U.S. university, I'm now building a creative and tech-focused career path, blending practical work with passion projects.</p>
 
     <nav>
         <ul>
@@ -26,5 +26,6 @@
             </li>
         </ul>
     </nav>
+
 </body>
 </html>
