interest pages complete

--- a/kim/interests/index.html
+++ b/kim/interests/index.html
@@ -9,5 +9,20 @@
     <h1>My Interests</h1>
 
     <p>I'm passionate about storytelling, gaming, and cultural exploration—especially when I can combine them in content like YouTube or TikTok videos.</p>
+
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="where.html">Where I live</a></li>
+            <li><a href="work.html">What I do</a></li>
+            <li><a href="interests/index.html">My Interests</a>
+                <ul>
+                    <li><a href="interests/photography.html">Taking Photos</a></li>
+                    <li><a href="interests/drone.html">Flying A Drone</a></li>
+                    <li><a href="interests/cycling.html">Riding My Bike</a></li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
 </body>
 </html>
