fixed link error in index page for interest main page

--- a/kim/interests/index.html
+++ b/kim/interests/index.html
@@ -12,14 +12,14 @@
 
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="where.html">Where I live</a></li>
-            <li><a href="work.html">What I do</a></li>
-            <li><a href="interests/index.html">My Interests</a>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../where.html">Where I live</a></li>
+            <li><a href="../work.html">What I do</a></li>
+            <li><a href="../interests/index.html">My Interests</a>
                 <ul>
-                    <li><a href="interests/photography.html">Taking Photos</a></li>
-                    <li><a href="interests/drone.html">Flying A Drone</a></li>
-                    <li><a href="interests/cycling.html">Riding My Bike</a></li>
+                    <li><a href="photography.html">Taking Photos</a></li>
+                    <li><a href="drone.html">Flying A Drone</a></li>
+                    <li><a href="cycling.html">Riding My Bike</a></li>
                 </ul>
             </li>
         </ul>
