--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <section>
             <h2>Projects</h2>
             <ul>
-                <li><a href="#">First Project</a></li>
+                <li><a href="kim/index.html">First Project</a></li>
             </ul>
         </section>
 
